tests/compile_fail/call-str.stderr
error: invalid argument, expected an identifier
 --> $DIR/call-str.rs:7:12
  |
7 |     #[call("len")]
  |            ^^^^^
